--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,8 +8,14 @@ $colors-font-top: #353535;
 $colors-font-primary: #000000;
 $colors-btn: linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
 $colors-btn: -webkit-linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
-$colors-btn: -moz-linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
 
+.main-container {
+    background-color: var(--bg-color);
+    padding: 0;
+    margin: 0;
+    width: 100%;
+    box-sizing: border-box;
+}
 @mixin btn {
     padding: 13px 0;
     margin: 20px 0;
@@ -20,7 +26,7 @@ $colors-btn: -moz-linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
     border: 0;
     background: $colors-btn;
     &:hover {
-        background-color: $colors-step-order;
+        background-color: $colors-btn;
         box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.35);
     }
 
@@ -44,6 +50,12 @@ $colors-btn: -moz-linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
         font-size: 16px;
         font-weight: 400;
         color: #fff;
+}
+
+@mixin card{
+    background-color: $colors-bg-operation;
+    border-radius: 15px;
+    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.1);
 }
 
 @media only screen and (max-width: 768px) {
@@ -72,6 +84,11 @@ $colors-btn: -moz-linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
     @keyframes infinite {
         0% {
             opacity: 1;
+            visibility: visible;
+        }
+        99% {
+            opacity: 0;
+            visibility: visible;
         }
         100% {
             opacity: 0;
@@ -146,7 +163,6 @@ $colors-btn: -moz-linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
 
     .header {
         background: $colors-bg-operation;
-        position: relative;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -278,22 +294,19 @@ $colors-btn: -moz-linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
     .card {
         position: relative;
         display: grid;
-        grid-template-rows: 180px 71px;
+        grid-template-rows: 180px;
+        grid-template-columns: 1fr auto;
         grid-template-areas: 
-            'image-card image-card image-card'
-            'txt-card txt-card like';
+            'image-card image-card'
+            'txt-card like';
         justify-content: space-between;
         align-items: center;
         background-color: transparent;
         height: 251px;
         box-sizing: border-box;
-        background: #fff;
-        border-radius: 15px;
-        box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.1);
+        @include card ;
         &__image { 
             grid-area: image-card;
-            grid-column-start: 1;
-            grid-column-end: 4;
             width: 100%;
             height: 100%;
             box-sizing: border-box;
@@ -338,7 +351,7 @@ $colors-btn: -moz-linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
         &__like { 
             grid-area: like;
             box-sizing: border-box;
-            padding: 25px;
+            padding: 22px;
         }
     }
 
@@ -351,7 +364,8 @@ $colors-btn: -moz-linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
     .like-checked1, .like-checked2, .like-checked3, .like-checked4 {
         font-size: 22px;} 
     .like-unchecked1, .like-unchecked2, .like-unchecked3, .like-unchecked4 {
-        font-size: 23px; color: blueviolet;
+        font-size: 23px; 
+        color: $colors-btn;
     }
     
     /**like1**/
@@ -443,19 +457,643 @@ $colors-btn: -moz-linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
 
 /**** PAGE RESTAURANTS ****/
 
+    .contenu {
+        position: relative;
+        z-index: 500;
+        top: -37px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
     .image-hero {
         width: 100%;
         height: 275px;
-        position: relative;
+        & img {
+            height: 275px;
+            width: 100%;
+            box-sizing: border-box;
+            object-fit: cover;
+        }
     }
-    .image-hero img {
-        height: 275px;
+    .menu {
+        display: flex;
+        flex-direction: column;
+        gap: 40px;
+        padding: 32px 13px 40px;
+        border-top-left-radius: 40px ;
+        border-top-right-radius: 40px;
+        top: 222px;
+        background-color: $colors-bg;
         width: 100%;
         box-sizing: border-box;
-        object-fit: cover;
-        
+        &__head {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
+            gap: 40px;
+            padding-right: 25px;
+            box-sizing: border-box;
+            & .title {
+                font-family: Shrikhand, sans-serif;
+                font-size: 28px;
+            }
+        }  
     }
 
+    .menu-section {
+        display: grid;
+        gap: 12px;
+        &__title {
+            font-weight: 300;
+            font-size: 16px;
+            border-bottom: 3px solid $colors-bg-new;
+            width: 40px;
+            padding-bottom: 8px;
+            margin: 0;
+        
+        }
+        &__card{
+            height: 69px;
+            display: grid;
+            grid-template-columns: auto 65px 59px;
+            justify-items: start;
+            gap: 10px;
+            position: relative;
+            @include card;
+        }
+    }
 
+    .choice {
+        display: flex;
+        flex-direction: column;
+        gap: 5px;
+        padding: 10px 15px 0;
+        align-items: flex-start;
+        box-sizing: border-box;
+        overflow-x: hidden;
+        box-sizing: border-box;
+        &__title {
+            margin: 0;
+            font-size: 18px;
+            font-weight: 500;
+            overflow: hidden;
+            white-space: nowrap;
+            text-overflow: ellipsis;
+        }
+        &__detail {
+            margin: 0;
+            font-size: 15px;
+            font-weight:300;
+            overflow: hidden;
+            white-space: nowrap;
+            text-overflow: ellipsis;
+        }
+    }
+
+    .price {
+        display: grid;
+        grid-template-columns: 1fr;
+        align-items: center;
+        justify-content: end;
+        padding: 23px 20px 0 20px;
+        align-items: center;
+        & p {
+            font-size: 15px;
+            font-weight: 700;
+            margin: 0;
+            border-radius: 0 15px 15px 0;
+        }
+    }
+    .check{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 20px;
+            width: 59px;
+            box-sizing: border-box;
+            color: $colors-bg-operation;
+            border-radius: 0 15px 15px 0;
+            position: absolute;
+            right: -59px;
+            height: 69px;
+            width: 59px;
+            align-items: center;
+            background-color: #99E2D0;
+            opacity: 0;
+            animation: slide 1s ease  forwards;
+            animation-delay: 0.1s;
+
+    
+        @keyframes slide {
+            from {
+                opacity: 0;
+                transform: translateY(-100%);
+            }
+            to{
+                opacity: 1;
+                transform: translateX(0);
+                visibility: visible;
+            }
+        }
+    }
+    .section {
+        display: grid;
+        gap: 12px;
+
+        &__title{
+            font-weight: 300;
+            font-size: 16px;
+            border-bottom: 3px solid $colors-bg-new;
+            width: 40px;
+            padding-bottom: 8px;
+            margin: 0;
+        }
+        &__card {
+            height: 69px;
+            display: flex;
+            flex-direction: row;
+            gap: 10px;
+            background-color: $colors-bg-operation;
+            border-radius: 15px;
+            position: relative;
+            & input {
+                display: none;
+                &[type=menu1]#checkbox1 + .confirm{
+                    width: 0;
+                    overflow: hidden;
+
+                }
+                &[type=menu1]#checkbox1:checked + .confirm {
+                    display: inline-block;
+                    width: 59px;
+                    background-color: $colors-bg-new;
+                    transform: scaleX(1);
+                    visibility: visible;
+                }
+                &[type=menu1]:checked +.confirm i{
+                    display: inline-block;
+                    transform: rotate(-45 deg);
+                    visibility: visible;
+                }
+            }
+        } 
+    }
+    .card1 {
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+        justify-content: space-between;
+        cursor: pointer;
+
+    }
+    .choix {
+        display:flex;
+        flex-direction: column;
+        gap: 5px;
+        padding: 10px 15px 0;
+        align-items: flex-start;
+        box-sizing: border-box;
+        &__title{
+            margin: 0;
+            font-size: 18px;
+            font-weight: 500;
+            overflow: hidden;
+            white-space: nowrap;
+            text-overflow: ellipsis;
+        }
+        &__detail {
+            margin: 0;
+            font-size: 15px;
+            font-weight: 300;
+            overflow: hidden;
+            white-space: nowrap;
+            text-overflow: ellipsis;
+        }
+    }
+    .prix {
+        padding: 0 25px;
+    }
+    .confirm {
+        height: 69px;
+        width: 59px;
+        background-color: #99E2D0;
+        color: #fff;
+        display: flex;
+        text-align: center;
+        align-items: center;
+        justify-content: center;
+        border-radius: 0 15px 15px 0;
+        transform-origin: right;
+        transform: scaleX(0);
+        & i{
+            color: #fff;
+            
+        }
+    }
+}
+@media screen and (min-width: 769px){
+    body {
+        margin: 0;
+        background: #F6F6F6;
+        font-family: "Roboto", sans-serif;
+        color: #000000;
+    }
+    img {
+        object-fit: cover;
+        border-top-left-radius: 15px;
+        border-top-right-radius: 15px;
+        height: 100%;
+        width: 100%;
+    }
+    /**** LOADER ****/
+  .loader-space {
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    left: 0;
+    top: 0;
+    z-index: 5000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: hsla(300, 14%, 95%, 0.83);
+    animation-duration: 0.2s;
+    animation-delay: 2s;
+    animation-timing-function: ease-in-out;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+    animation-name: infinite;
+  }
+  @keyframes infinite {
+    0% {
+      opacity: 1;
+      visibility: visible;
+    }
+    99% {
+      opacity: 0;
+      visibility: visible;
+    }
+    100% {
+      opacity: 0;
+      visibility: hidden;
+    }
+  }
+  .loader {
+    display: inline-block;
+    position: relative;
+    width: 80px;
+    height: 80px;
+  }
+  .loader div {
+    position: absolute;
+    top: 33px;
+    width: 13px;
+    height: 13px;
+    border-radius: 50%;
+    background: -webkit-linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
+    animation-timing-function: cubic-bezier(0, 1, 1, 0);
+  }
+  .loader div:nth-child(1) {
+    left: 8px;
+    animation: loader1 0.6s infinite;
+  }
+  .loader div:nth-child(2) {
+    left: 8px;
+    animation: loader2 0.6s infinite;
+  }
+  .loader div:nth-child(3) {
+    left: 32px;
+    animation: loader2 0.6s infinite;
+  }
+  .loader div:nth-child(4) {
+    left: 56px;
+    animation: loader3 0.6s infinite;
+  }
+  @keyframes loader1 {
+    0% {
+      transform: scale(0);
+    }
+    100% {
+      transform: scale(1);
+    }
+  }
+  @keyframes loader3 {
+    0% {
+      transform: scale(1);
+    }
+    100% {
+      transform: scale(0);
+    }
+  }
+  @keyframes loader2 {
+    0% {
+      transform: translate(0, 0);
+    }
+    100% {
+      transform: translate(24px, 0);
+    }
+  }
+
+  .main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: $colors-font-primary;
+  }
+
+      /**** LOCAL ****/
+      .place {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        padding: 15px 0;
+        gap: 17px;
+        color: $colors-font-top;
+        font-size: 16px;
+        font-weight: 500;
+        background: $colors-bg-place;
+        &__city {
+            text-decoration: none;
+            color: $colors-font-top;
+            padding-right: 10px;
+        }
+    }
+    .header {
+        background: $colors-bg-operation;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
+            &__logo {
+                width: 162px;
+                height: 44px;
+                padding: 14px 0 5px 0;
+            }
+            &__back {
+                color: $colors-font-primary;
+                position: absolute;
+                left: 23px;
+            }
+    }
+    /**** PRESENTATION ****/
+    .presentation {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        padding: 39px 20px 30px 20px;
+        &__heading {
+            padding: 0 25px;
+            @include main-title;
+            color: $colors-font-primary;
+        }
+
+        &__detail {
+            padding: 10px 0;
+            font-weight: 300;
+            font-size: 18px;
+            color: $colors-font-top;
+            margin: 0;
+        }
+    }
+    button {
+        @include btn;
+        @include typo-btn;
+        margin: 27px 0;
+        }
+
+    /**** FONCTIONNEMENT ****/
+    .operation {
+        background: $colors-bg-operation;
+        padding: 48px 20px;
+        display: flex;
+        flex-direction: row;
+        gap: 26px;
+        box-sizing: border-box;
+        &__title {
+            @include main-title;
+            width: 100%;
+        }
+    }
+    .step {
+        display: flex;
+        flex-direction: row;
+        width: 30%;
+        align-items: center;
+        &__detail {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            background: $colors-bg;
+            box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.15);
+            border-radius: 20px;
+            gap: 20px;
+            margin-left: 10px;
+            list-style: none;
+            padding: 10px 40px;
+            position: relative;
+            width: 100%;
+            & .fa-store {
+                color: $colors-step-order;
+            }
+        }
+        &__order {
+            background: $colors-step-order;
+            padding: 5px 10px;
+            border-radius: 15px;
+            color: $colors-bg-operation;
+            position: absolute;
+        }
+        
+    }
+/**** RESTAURANTS ****/
+.restaurants {
+    display: flex;
+    flex-direction: column;
+    padding: 54px 18px 66px 17px;
+    gap: 25px;
+    &__title{
+        padding-left: 3px;
+        padding-bottom: 3px;
+        @include main-title;
+    }
+    &__card{
+        display: flex;
+        flex-direction: column;
+        gap: 26px;
+        box-sizing: border-box;
+        & a{
+            text-decoration: none;
+            color: $colors-font-primary;
+            width: 100%;
+            height: 251px;
+            box-sizing: border-box;
+        }
+
+    }
+}
+.card {
+    position: relative;
+    display: grid;
+    grid-template-rows: 180px;
+    grid-template-columns: 1fr auto;
+    grid-template-areas: 
+        'image-card image-card'
+        'txt-card like';
+    justify-content: space-between;
+    align-items: center;
+    background-color: transparent;
+    height: 251px;
+    box-sizing: border-box;
+    @include card ;
+    &__image { 
+        grid-area: image-card;
+        width: 100%;
+        height: 100%;
+        box-sizing: border-box;
+        & img {
+            object-fit: cover;
+            border-top-left-radius: 15px;
+            border-top-right-radius: 15px;
+            height: 100%;
+            width: 100%;
+        }
+        & .box-new {
+            position:absolute;
+            top: 13px;
+            right: 12px;
+            padding: 10px;
+            background-color: $colors-bg-new;
+            color: $colors-font-new;
+            border-radius: 2px;
+            font-size: 14px;
+            font-weight: 500;
+        }
+
+    }
+    &__content { 
+        grid-area: txt-card;
+        grid-column-start: 1;
+        grid-column-end: 3;
+        height: 71px;
+        padding: 16px 25px 12px 13px;
+        box-sizing: border-box;
+        & h3 {
+            margin: 0;
+            font-size: 18px;
+            font-weight: 700;
+        };
+        & p {
+            margin: 0;
+            font-size: 17px;
+            font-weight: 300;
+        }
+    }
+    &__like { 
+        grid-area: like;
+        box-sizing: border-box;
+        padding: 22px;
+    }
+}
+
+
+/**FAVORI**/
+label {
+    cursor: pointer;
+}
+
+.like-checked1, .like-checked2, .like-checked3, .like-checked4 {
+    font-size: 22px;} 
+.like-unchecked1, .like-unchecked2, .like-unchecked3, .like-unchecked4 {
+    font-size: 23px; 
+    color: $colors-btn;
+}
+
+/**like1**/
+input[type="checkbox"]#like1, .like-unchecked1 {
+    display: none;
+}
+input[type="checkbox"]#like1:checked ~ .like-unchecked1{
+    display: inline-block;
+}
+input[type="checkbox"]#like1:checked ~ .like-checked1 {
+    display: none;
+}
+
+/**like2**/
+input[type="checkbox"]#like2, .like-unchecked2 {
+    display: none;
+}
+input[type="checkbox"]#like2:checked ~ .like-unchecked2 {
+    display: inline-block;
+}
+input[type="checkbox"]#like2:checked ~ .like-checked2 {
+    display: none;
+}
+
+/**like3**/
+input[type="checkbox"]#like3, .like-unchecked3 {
+    display: none;
+}
+input[type="checkbox"]#like3:checked ~ .like-unchecked3 {
+    display: inline-block;
+}
+input[type="checkbox"]#like3:checked ~ .like-checked3 {
+    display: none;
+}
+
+/**like4**/
+input[type="checkbox"]#like4, .like-unchecked4 {
+    display: none;
+}
+input[type="checkbox"]#like4:checked ~ .like-unchecked4 {
+    display: inline-block;
+}
+input[type="checkbox"]#like4:checked ~ .like-checked4 {
+    display: none;
+}
+
+
+/**** FOOTER ****/
+
+.footer {
+    @include footer;
+    &__title {
+        font-family: Shrikhand, 'sans-serif';
+        margin: 0;
+        font-size: 18px;
+    }
+    &__content{
+        margin: 16px 0;
+        list-style: none;
+        padding: 0;
+        & a{
+            text-decoration: none;
+            color: #fff;
+        }
+        & li{
+            display: grid;
+            grid-template-columns: auto auto ;
+            grid-template-rows: auto ;
+            gap: 7px;
+            align-items: center;
+            justify-items: start;
+            justify-content: start;
+            padding-top: 7px;
+            
+            & .fa-utensils {
+                padding-right: 6px;
+                font-size: 14px;
+            }
+
+            & .fa-handshake-angle {
+                font-size: 14px;
+            }
+        }
+    }
+
+}
 
 }
